# marina

./: .gitignore  COPILOT.md  Cargo.toml  README.md  test_global_simple.prg  test_globals.prg  test_import_global.prg
docs/: BUILD.md  LANGUAGE_FEATURES_CHECKLIST.md  Makefile  NEXT_PHASE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TEST_RESULTS.md  build_pdf.sh
docs/compiler_internals/: README.md  ast.md  build_pdf.sh  bytecode.md  errors.md  extending.md  lexer.md  overview.md  parser.md  vm.md
docs/guides/: compiler_internals.md  database_programming.md  getting_started.md  (+3 more)
examples/: arrays.prg  augmented_ops.prg  case_demo.prg  color_demo.prg  conditionals.prg  console_demo.prg  cursor_demo.prg  demo.prg  factorial.prg  form_roadmap.prg  hanoi.prg  hanoi_imports.prg  hanoi_imports_functional.prg  hanoi_imports_test.prg  hanoi_iterative.prg  hanoi_simple.prg  hanoi_simple_animated.prg  import_demo.prg  input_demo.prg  logical_ops.prg  login_demo.prg  loops.prg  math_demo.prg  math_test.prg  multi_func.prg  password_demo.prg  phase1_test.prg  simple.prg  simple_func.prg  simple_input.prg  sleep_demo.prg  snake.prg  string_functions.prg  strings.prg  sudoku.prg  sudoku_nav.prg  test_case_simple.prg  test_clipper_bool.prg  test_display.prg  test_doubleq.prg  (+6 more)
scripts/: install-dev.sh  run_examples_noninteractive.sh
src/: ast.rs  bytecode.rs  compiler.rs  diagnostics.rs  formatter.rs  lexer.rs  lib.rs  main.rs  module.rs  parser.rs  token.rs  vm.rs
tests/: compiler_tests.rs  formatter_tests.rs  lexer_tests.rs  parser_tests.rs  phase2_tests.rs  vm_tests.rs
(+33 files in other folders)
